# math-cs-mini-experiments

./: .gitignore  README.md  main.py  prime_lib.py  pyproject.toml
deep_learning/: README.md
deep_learning/backprop_from_scratch/: README.md  backprop_from_scratch.ipynb
deep_learning/cnn_image_regression/: README.md  cnn_image_regression.ipynb
deep_learning/crypto_event_robustness/: README.md  REPORT.md  RUN_HEAVY.py  RUN_MEDIUM.py  RUN_QUICK.py  RUN_SYNTHETIC_SMOKE_TEST.py
deep_learning/crypto_hierarchical_forecasting/: ARCHITECTURE_NOTES.md  README.md  (+8 more)
docs/: conventions.md  research_overview.md
ml_and_visuals/: fuckjupyter.py  generateplot.py  logistic_regression_animation.py  mnist_keras_intro.py  region_plot_3d.py
number_theory/: README.md
outputs/: prefix_chain_summary.txt
prime_patterns/: Prime_Squares_Distance_Log_terms.py  Prime_deadends.py  head_tail.py  prime_deadends.py
prime_set_constructions/: Clustering_Prime_Products.py  combinatorics_lemma.py  combinatorics_lemma_exponents.py  combinatorics_lemma_exponents_exhaustive.py
primorial_wheels/: Chunks_of_6_symm.py  Chunks_of_X_symm.py  Nonlinear_Arithmetic_Sets.py  PrimorialGapDensityCount.py  PrimorialGapFreq.py  chunks_of_x_symm.py  extended_orbits.py  nonlinear_arithmetic_sets.py  orbit_primorials.py  primorial_gap_freq.py
primorials_and_twin_primes/: Primorial_Center_Radii_TwinP.py  Primorial_radius_scan_twin_prime_factor.py  plus_or_minus_primorial_squares.py  primorial_center_radii_twinp.py  primorial_radius_scan_twin_prime_factor.py  primorial_to_prime_distance_run_ratios.py
(+51 files in other folders)
